Rifinite sezioni notizie secondarie

--- a/index.html
+++ b/index.html
@@ -699,42 +699,55 @@
             <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
           </div>
 
-          <div class="articles-container">
+          <div class="flex-row-container extra-news-container">
             <div class="left-container">
-              <div class="generic-article-container">
-                <figure>
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
-                </figure>
-                <div class="generic-article-writing-container">
-                  <h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </h3>
-                  <span>
-                  <i>di Lorem ipsum dolor sit amet</i>
-                </span>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
+              <div class="generic-article-container flex-column-container">
+                <div class="flex-row-container">
+                  <figure class="figure-right-margin">
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+                  </figure>
+                  <div class="generic-article-writing-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h3 class="generic-article-title">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </h3>
+                    <div class="additional-info-font-size">
+                      <p class="attribution-colour-and-font-style generic-article-attribution-margin">
+                        di Lorem ipsum dolor sit amet
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      </p>
+                      <ul class="generic-article-additional-info-list additional-info-list-margin-and-padding">
+                        <li><span class="list-colour-and-font-weight">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit.</span><span class="attribution-colour-and-font-style list-attribution-margin">
+                        di Lorem ipsum</span></li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="coupled-articles-container">
+              <div class="coupled-articles-container extra-news-coupled-articles-container">
                 <div class="coupled-articles-left-article-container coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
+                <span class="top-writing-styling">
                   LOREM IPSUM
                 </span>
-                  <h2>
+                  <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                   <div class="coupled-articles-image-and-comment-container">
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figure class="coupled-articles-figure">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
                     </figure>
                     <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                      <p>
+                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                      coupled-articles-attribution">
+                        di Lorem Ipsum
+                      </p>
+                      <p class="coupled-articles-text-font-size">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                       </p>
                     </div>
@@ -742,21 +755,22 @@
                 </div>
 
                 <div class="coupled-articles-right-article-container coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
+                <span class="top-writing-styling">
                   LOREM IPSUM
                 </span>
-                  <h2>
+                  <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                   <div class="coupled-articles-image-and-comment-container">
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figure class="coupled-articles-figure">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
                     </figure>
                     <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                      <p>
+                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                      coupled-articles-attribution">
+                        di Lorem Ipsum
+                      </p>
+                      <p class="coupled-articles-text-font-size">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                       </p>
                     </div>
@@ -766,19 +780,19 @@
             </div>
 
             <div class="right-container">
-              <div class="generic-article-container">
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
-                </div>
+              <div class="extra-news-right-generic-article-container">
+                <p class="top-writing-styling generic-right-article-top-writing">
+                  LOREM IPSUM
+                </p>
+                <article class="generic-article-space-before-attribution">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="right-side-full-width-img">
+                  <h3 class="generic-article-title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p class="attribution-font-size attribution-colour-and-font-style">
+                  di Lorem Ipsum
+                </p>
               </div>
             </div>
           </div>
@@ -792,42 +806,55 @@
             <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
           </div>
 
-          <div class="articles-container">
+          <div class="flex-row-container extra-news-container">
             <div class="left-container">
-              <div class="generic-article-container">
-                <figure>
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
-                </figure>
-                <div class="generic-article-writing-container">
-                  <h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </h3>
-                  <span>
-                  <i>di Lorem ipsum dolor sit amet</i>
-                </span>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
+              <div class="generic-article-container flex-column-container">
+                <div class="flex-row-container">
+                  <figure class="figure-right-margin">
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+                  </figure>
+                  <div class="generic-article-writing-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h3 class="generic-article-title">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </h3>
+                    <div class="additional-info-font-size">
+                      <p class="attribution-colour-and-font-style generic-article-attribution-margin">
+                        di Lorem ipsum dolor sit amet
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      </p>
+                      <ul class="generic-article-additional-info-list additional-info-list-margin-and-padding">
+                        <li><span class="list-colour-and-font-weight">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit.</span><span class="attribution-colour-and-font-style list-attribution-margin">
+                        di Lorem ipsum</span></li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="coupled-articles-container">
+              <div class="coupled-articles-container extra-news-coupled-articles-container">
                 <div class="coupled-articles-left-article-container coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
+                <span class="top-writing-styling">
                   LOREM IPSUM
                 </span>
-                  <h2>
+                  <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                   <div class="coupled-articles-image-and-comment-container">
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figure class="coupled-articles-figure">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
                     </figure>
                     <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                      <p>
+                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                      coupled-articles-attribution">
+                        di Lorem Ipsum
+                      </p>
+                      <p class="coupled-articles-text-font-size">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                       </p>
                     </div>
@@ -835,21 +862,22 @@
                 </div>
 
                 <div class="coupled-articles-right-article-container coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
+                <span class="top-writing-styling">
                   LOREM IPSUM
                 </span>
-                  <h2>
+                  <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                   <div class="coupled-articles-image-and-comment-container">
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    <figure class="coupled-articles-figure">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
                     </figure>
                     <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                      <p>
+                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                      coupled-articles-attribution">
+                        di Lorem Ipsum
+                      </p>
+                      <p class="coupled-articles-text-font-size">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                       </p>
                     </div>
@@ -859,19 +887,19 @@
             </div>
 
             <div class="right-container">
-              <div class="generic-article-container">
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
-                </div>
+              <div class="extra-news-right-generic-article-container">
+                <p class="top-writing-styling generic-right-article-top-writing">
+                  LOREM IPSUM
+                </p>
+                <article class="generic-article-space-before-attribution">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="right-side-full-width-img">
+                  <h3 class="generic-article-title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p class="attribution-font-size attribution-colour-and-font-style">
+                  di Lorem Ipsum
+                </p>
               </div>
             </div>
           </div>
