Rifinita sezione blog e rubriche

--- a/index.html
+++ b/index.html
@@ -906,116 +906,149 @@
         </section>
 
         <section id="blog-e-rubriche">
-        <span>
-          BLOG <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> RUBRICHE
-        </span>
+          <img src="img/Four_Horizontal_Lines.png" alt="quattro linee orizzontali"
+          class="blog-rubriche-four-horizontal-lines">
+
+          <span class="flex-row-container blog-rubriche-writing">
+            BLOG <img src="img/And_Symbol.png" alt="placeholder"> RUBRICHE
+          </span>
 
           <div class="three-columns-container">
-            <div class="three-columns-column">
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+            <div class="three-columns-column three-columns-left-column">
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="three-columns-column">
+            <div class="three-columns-column three-columns-central-column">
               <div id="blog-e-rubriche-cartoon-section">
-                <p>
+                <p class="top-writing-styling">
                   LOREM IPSUM
                 </p>
-                <figure>
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                </figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="blog-rubriche-cartoon-img">
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="three-columns-column">
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+            <div class="three-columns-column three-columns-right-column">
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
               </div>
 
-              <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                <div class="editoriali-commenti-comment-title-and-author">
-                  <h4>
+              <div class="flex-row-container blog-rubriche-container">
+                <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                     class="pfp-border-radius blog-rubriche-pfp">
+                <div class="blog-rubriche-text-container">
+                  <p class="top-writing-styling">
+                    LOREM IPSUM
+                  </p>
+                  <h4 class="blog-rubriche-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </h4>
-                  <p>
+                  <p class="attribution-colour-and-font-style attribution-font-size">
                     di Lorem Ipsum
                   </p>
                 </div>
