Rifinita sezione video dalla rete

--- a/index.html
+++ b/index.html
@@ -1058,36 +1058,50 @@
         </section>
 
         <section id="video-dalla-rete">
-        <span>
-          I VIDEO DALLA RETE
-        </span>
+          <p class="attribution-font-size video-dalla-rete-top-writing">
+            I VIDEO DALLA RETE
+          </p>
 
-          <div class="flex-row-container">
-            <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+          <div class="flex-row-container video-container">
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
 
-            <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
 
-            <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
 
-            <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </figcaption>
+            </figure>
+
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </figcaption>
+            </figure>
+
+            <figure class="video-dalla-rete-figure">
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+              <figcaption class="attribution-font-size video-dalla-rete-font-colour">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
           </div>
