Rifinita sezione ciarpame

--- a/index.html
+++ b/index.html
@@ -1108,54 +1108,67 @@
         </section>
 
         <section id="garbage-section" class="flex-row-container">
-          <div class="garbage-element">
-          <span>
-            LOREM IPSUM
-          </span>
+          <div class="garbage-element video-dalla-rete-figure">
+            <p class="garbage-element-top-writing">
+              LOREM IPSUM 1
+            </p>
 
             <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="garbage-img">
+              <figcaption class="attribution-font-size">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
           </div>
 
-          <div class="garbage-element">
-          <span>
-            LOREM IPSUM
-          </span>
+          <div class="garbage-element video-dalla-rete-figure">
+            <p class="garbage-element-top-writing">
+              LOREM IPSUM 2
+            </p>
 
             <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="garbage-img">
+              <figcaption class="attribution-font-size">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
           </div>
 
-          <div class="garbage-element">
-          <span>
-            LOREM IPSUM
-          </span>
+          <div class="garbage-element video-dalla-rete-figure">
+            <p class="garbage-element-top-writing">
+              LOREM IPSUM 3
+            </p>
 
             <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="garbage-img">
+              <figcaption class="attribution-font-size">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
           </div>
 
-          <div class="garbage-element">
-          <span>
-            LOREM IPSUM
-          </span>
+          <div class="garbage-element video-dalla-rete-figure">
+            <p class="garbage-element-top-writing">
+              LOREM IPSUM 4
+            </p>
 
             <figure>
-              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-              <figcaption>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="garbage-img">
+              <figcaption class="attribution-font-size">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="garbage-element video-dalla-rete-figure">
+            <p class="garbage-element-top-writing">
+              LOREM IPSUM 5
+            </p>
+
+            <figure>
+              <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="garbage-img">
+              <figcaption class="attribution-font-size">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </figcaption>
             </figure>
           </div>
