Rifinita sezione i più visti

--- a/index.html
+++ b/index.html
@@ -1176,47 +1176,51 @@
 
         <div id="i-più-container" class="flex-row-container">
           <section id="i-più-visti" class="half-container flex-column-container">
-          <span>
-            I PIÙ VISTI
-          </span>
+            <p class="i-più-top-writing i-più-margin-before-list">
+              I PIÙ VISTI
+            </p>
 
             <div class="flex-row-container">
-              <div>
-                <ul>
-                  <li>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      <figcaption>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <div class="i-più-list-column">
+                <ul class="paragraph-after-attribution">
+                  <li class="i-più-visti-list-item-padding-bottom">
+                    <figure class="bottom-border">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+                      <figcaption class="attribution-font-size video-dalla-rete-font-colour
+                      i-più-visti-list-item-padding-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
-                  <li>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      <figcaption>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  <li class="i-più-visti-list-item-padding-bottom">
+                    <figure class="bottom-border">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+                      <figcaption class="attribution-font-size video-dalla-rete-font-colour
+                      i-più-visti-list-item-padding-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
                 </ul>
               </div>
 
-              <div>
-                <ul>
-                  <li>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      <figcaption>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+              <div class="i-più-list-column">
+                <ul class="paragraph-after-attribution">
+                  <li class="i-più-visti-list-item-padding-bottom">
+                    <figure class="bottom-border">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+                      <figcaption class="attribution-font-size video-dalla-rete-font-colour
+                      i-più-visti-list-item-padding-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
-                  <li>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      <figcaption>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  <li class="i-più-visti-list-item-padding-bottom">
+                    <figure class="bottom-border">
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
+                      <figcaption class="attribution-font-size video-dalla-rete-font-colour
+                      i-più-visti-list-item-padding-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
@@ -1226,9 +1230,9 @@
           </section>
 
           <section id="i-più-letti" class="half-container flex-column-container">
-          <span>
-            I PIÙ LETTI
-          </span>
+            <p class="i-più-top-writing">
+              I PIÙ LETTI
+            </p>
 
             <div class="flex-row-container">
               <div>
